cargando el proyecto final

--- a/views/client.hbs
+++ b/views/client.hbs
@@ -1,3 +1,11 @@
 
+<h1 style="text-align: center; font-size: 30px">Bienvenido {{nombre}}, realice un pedido</h1>
 
-<h1>Bienvenido Cliente, realice un pedido</h1>
+<ul class="encabezado__lista" style="background-color: black;">
+    <li><a href="/cliente/productos" class="encabezado__lista-link">
+            <hr> REALIZAR UN NUEVO PEDIDO
+        </a></li>
+        <li><a href="/cerrar" class="encabezado__lista-link">
+            <hr> cerrar sesion
+        </a></li>
+</ul>
