--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,6 +3,7 @@
         <section class="banner">
             <div class="banner__imagen">
                 <h1 class="banner__imagen--h1">LA MEJOR <br/> PIZZA <br/> ARGENTINA</h1>
+                <a href="/login" class="enviar--home" > Realizar un pedido</a>
             </div>
         </section>
             <h1 class="sobre__nosotros-texto1"> - </h1>
