--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
      <link rel="stylesheet" href="/css/encabezado.css">
      <link rel="stylesheet" href="/css/pie-pagina.css">
      <link rel="stylesheet" href="/css/contacto.css">
+     <link rel="stylesheet" href="/css/productos.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
