--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,8 +8,9 @@
             <nav class="navegacion">
                 <ul class="encabezado__lista">
                     <li><a href="/" class="encabezado__lista-link"><hr> Home</a></li>
-                    <li><a href="./pages/productos.html" class="encabezado__lista-link"><hr> Productos</a></li>
-                    <li><a href="/login" class="encabezado__lista-link"><hr> Login </a></li>
+                    <li><a href="/productos" class="encabezado__lista-link"><hr> Productos</a></li>
+                    <li><a href="/login" class="encabezado__lista-link"><hr> Perfil </a></li>
                 </ul>
             </nav>
+            
     </header>
