--- a/views/registro.hbs
+++ b/views/registro.hbs
@@ -37,7 +37,7 @@
                 <input type="submit" value="Enviar Registro" id="enviar" class="enviar">            
 
 
-                 
+                  <a href="/login" class="registro"><h1>Ya tienes cuenta?</h1></a>
 
             </form>
         </section>
