--- a/public/css/body.css
+++ b/public/css/body.css
@@ -23,9 +23,36 @@ hr{
     height: 50vw;
     width: 100%;
     display: flex;
-    justify-content: end;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    
 }
+
+.enviar--home {
+    transform: translate(-50%, -50%);
+    width: 10% ;
+    margin: 30px;
+    margin-right: 300px;
+    text-align: center;
+    padding: 15px 3px;
+    color: #242423;
+    background-color: #e8eddf;
+    border-color: #242423;
+    border-radius: 15px;
+    transition: 0.5s all;
+    cursor: pointer;
+}
+/* style="width: 10%; text-align: center; margin: 10px" */
+
+
+
+.enviar--home:hover {
+    background-color: #242423 ;
+    color: #e8eddf ;
+    /* transform: scale(1.1) rotate(1deg) ; */
+}
+
 .banner__imagen--h1{
     color: #e8eddf;
     font-size: 100px;
