--- a/public/css/contacto.css
+++ b/public/css/contacto.css
@@ -34,6 +34,7 @@ input, textarea, select{
     margin: 40px 0 15px;
     font-size: 17px;
 }
+
 .enviar {
     width: 40% ;
     padding: 15px 3px;
@@ -45,6 +46,9 @@ input, textarea, select{
     cursor: pointer;
 }
 
+
+
+
 .enviar:hover {
     background-color: #242423 ;
     color: #e8eddf ;
@@ -54,6 +58,11 @@ input, textarea, select{
 .principal__contacto{
     display: flex;
     justify-content: space-between;
+    /* align-items: center; */
+}
+.principal__contacto2{
+    display: flex;
+    justify-content: center;
     /* align-items: center; */
 }
 
@@ -85,6 +94,7 @@ input, textarea, select{
     flex-direction: column;
     align-items: center;
 }
+
 
 .registro{
     font-family: 'Caveat', cursive;
