--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,4 +1,18 @@
 
 
 
-<h1>Bienvenido Administrador</h1>
+
+<h1 style="text-align: center; font-size: 30px">Bienvenido Administrador</h1>
+
+<ul class="encabezado__lista" style="background-color: black;">
+    <li><a href="/admin/productos" class="encabezado__lista-link">
+        <hr> Administrar Productos
+    </a></li>
+    <li><a href="/pedidos" class="encabezado__lista-link">
+            <hr> Administrar pedidos
+    </a></li>
+     <li><a href="/cerrar" class="encabezado__lista-link">
+            <hr> cerrar sesion
+        </a></li>
+
+</ul>
