--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,5 +1,5 @@
 <main>
-        <h1 class="contacto__titulo">REGISTRO<hr></h1>
+        <h1 class="contacto__titulo">Ingrese y Realice un pedido<hr></h1>
         <section class="principal__contacto">
             <div class="contacto__info">
                 <p class="contacto__info--item">pizza@house.com</p>
@@ -22,9 +22,12 @@
                     </a>
                 </div>
             </div>
+            <h1>{{mensaje}}</h1>
             <form class="contacto__form" action="/validation" method="post" >
-                <label for="nombreApellido">Nombre y Apellido</label>
-                <input type="text" id="nombreApellido" class="inputPadron" name="nombre" placeholder="Nombre Apellido" required>
+
+
+                <label for="email">Correo Electronico</label>
+                <input type="email" id="email" class="inputPadron"required name="email" placeholder="email@dominio.com">
 
                 <label for="password">Contraseña</label>
                 <input type="password" id="password" class="inputPadron" name="password" placeholder="xxxx">
@@ -33,7 +36,7 @@
 
                 <input type="submit" value="Ingresar" id="enviar" class="enviar">            
 
-                 <a href="/registro" class="registro"><h1>Registrate</h1></a>
+                 <a href="/registro" class="registro" style="text-align: center;"><h1>¿No tienes cuenta? <br>     Registrate</h1></a>
                   
 
             </form>
