agregando README y comentarios de como funciona todo el codigo

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,6 @@
 
     <main>
+        <h1>{{mensaje}}</h1>
         <section class="banner">
             <div class="banner__imagen">
                 <h1 class="banner__imagen--h1">LA MEJOR <br/> PIZZA <br/> ARGENTINA</h1>
