--- a/public/css/pie-pagina.css
+++ b/public/css/pie-pagina.css
@@ -1,3 +1,17 @@
+html{
+    height: 100%;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+
+footer{
+    margin-top: auto;
+}
+
 .pie-pagina{
     background-color: #242423  ;
     color:#e8eddf;
