--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -11,6 +11,9 @@
     <li><a href="/pedidos" class="encabezado__lista-link">
             <hr> Administrar pedidos
     </a></li>
+        <li><a href="/usuarios" class="encabezado__lista-link">
+            <hr> Administrar Usuarios
+    </a></li>
      <li><a href="/cerrar" class="encabezado__lista-link">
             <hr> cerrar sesion
         </a></li>
