--- a/views/clientOrder.hbs
+++ b/views/clientOrder.hbs
@@ -1,4 +1,10 @@
+<div style="display: flex;">
+    <a href="/cliente/productos" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
 
-<h1>{{title}}</h1>
-
-<p> su pedido es {{order.description}}</p>
+    <div>
+        <h1>{{title}}</h1>
+        <p> Su pedido es :{{order.description}},</p>
+        <p> Se realizo el dia y hora : {{order.orderedAt}} ,</p>
+        <p>Nos estaremos contactando a la brevedad vía mail/wsp para infomarle el costo final del pedido y el horario de entrega</p>
+    </div>
+</div>
