--- a/views/error.hbs
+++ b/views/error.hbs
@@ -3,3 +3,6 @@
 
 
 <h1 style="text-align: center; font-size: 30px">{{mensaje}}</h1>
+
+
+   <a href="/cliente/productos" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
