--- a/views/clientProducts.hbs
+++ b/views/clientProducts.hbs
@@ -22,12 +22,14 @@
 
     <div>
     <h1 class="contacto__titulo">Formulario de Pedido<hr></h1>
+    <h2>Hola {{user.nombre}}, porfavor realiza un pedido especificandolo a continuación</h2>
         <section class="principal__contacto2">
             <form class="contacto__form" action="/pedidos" method="post" >
 
-                <label for="nombre">Usuario</label>
-                <input type="email" id="nombreUsuario" class="inputPadron" name="name" placeholder="Ingrese su email de usuario" required>
 
+                <input type="text" id="name" class="inputPadron2" name="name" value="{{user.nombre}}" required>
+
+                <input type="email" id="email" class="inputPadron2" name="email" value="{{user.email}}" required>
 
                 <label for="descripcion">Descripción del pedido</label>
                 <textarea id="descripcion" class="inputPadron" name="description" placeholder="Ingrese el pedido a realizar, colocando el nombre del producto y la cantidad" required style="height: 200px; width: 300px; text-align: center"></textarea>
