--- a/views/detailsProduct.hbs
+++ b/views/detailsProduct.hbs
@@ -1,6 +1,8 @@
    <div>
     <h1 class="title">{{title}}</h1> <br>
     
+       <a href="/cliente/productos" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
+
     <div class="product-container">
      
         <div class="product-item">
