--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,8 @@
      <link rel="stylesheet" href="/css/pie-pagina.css">
      <link rel="stylesheet" href="/css/contacto.css">
      <link rel="stylesheet" href="/css/productos.css">
+     <link rel="stylesheet" href="/css/clientTable.css">
+
      <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
