eliminado de admins arreglado

--- a/views/detailClient.hbs
+++ b/views/detailClient.hbs
@@ -7,7 +7,7 @@
         <div class="product-container">
 
             <div class="product-item">
-                <p class="product-name">Nombre del cliente: {{client.name}}</p>
+                <p class="product-name">Nombre del cliente: {{client.nombre}}</p>
                 <p class="product-description">Email: {{client.email}}</p>
                 <p class="product-description">Fecha de registro: {{client.timestamp}}</p>
                 <p>Rol: {{client.role}}</p>
