--- a/views/error.hbs
+++ b/views/error.hbs
@@ -5,4 +5,4 @@
 <h1 style="text-align: center; font-size: 30px">{{mensaje}}</h1>
 
 
-   <a href="/cliente/productos" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
+   <a href="/login" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
