--- a/views/editProduct.hbs
+++ b/views/editProduct.hbs
@@ -18,10 +18,8 @@
                 <input type="text" id="descripcion" class="inputPadron" name="imageUrl" placeholder="agregue el url de la imagen del producto" value="{{product.imageUrl}}" required >
                 
 
-                <input type="submit" value="Agregar Producto" id="enviar" class="enviar">            
+                <input type="submit" value="Actualizar Producto" id="enviar" class="enviar">            
 
-
-                  <a href="/login" class="registro"><h1>Ya tienes cuenta?</h1></a>
 
             </form>
         </section>
