--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -1,34 +1,27 @@
-<div class="agregarProducto" >
+<div class="agregarProducto">
 
- <a href="/admin" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
-        <div>
-            <h1 class="title">{{title}}</h1> <br>
-                <div class="product-container">
-                    {{#each orders}}
-                    <div class="product-item">
-                        <p class="product-name">Producto: {{this.name}}</p>
-                        <p class="product-description">Descripción: {{this.description}}</p>
-                        <p class="product-description">Hora de pedido: {{this.orderedAt}}</p>
-                        <div class="button-container">
-                            <a href="/pedidos/{{this._id}}" class="view-button">Ver completo</a>
-                            {{!-- <a href="/editar/{{this._id}}" class="edit-button">Editar</a> --}}
-                            <form action="/delete-pedido/{{this._id}}" method="post"
-                                onsubmit="return confirm('¿Estás seguro de eliminar el producto?')">
-                                <input type="submit" value="Eliminar" id="enviar" class="delete-button">
-                            </form>
+    <a href="/admin" class="enviar2" style="width: 10%; text-align: center; margin: 10px"> Regresar </a>
+    <div>
+        <h1 class="title">{{title}}</h1> <br>
+        <div class="product-container">
+            {{#each orders}}
+            <div class="product-item">
+                <p class="product-name">Producto: {{this.name}}</p>
+                <p class="product-description">Descripción: {{this.description}}</p>
+                <p class="product-description">Hora de pedido: {{this.orderedAt}}</p>
+                <div class="button-container">
+                    <a href="/pedidos/{{this._id}}" class="view-button">Ver completo</a>
 
-                            {{!-- <a href="/delete-pedido/{{this._id}}" class="view-button" >eliminar </a> --}}
-
-                        </div>
-                    </div>
-                      {{/each}}
+                    <a href="/pedidos" onclick="deletePedido('{{this._id}}',window.location.href);return false" async class="delete-button"  >Eliminar</a>
                 </div>
-        </div>
-  
+                
+            {{/each}}
+            </div>
 
-   
+    </div>
+
+
+    
 </div>
-
-
-
+</div>
 
