arreglando un div

--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -12,16 +12,17 @@
                 <div class="button-container">
                     <a href="/pedidos/{{this._id}}" class="view-button">Ver completo</a>
 
-                    <a href="/pedidos" onclick="deletePedido('{{this._id}}',window.location.href);return false" async class="delete-button"  >Eliminar</a>
+                    <a href="/pedidos" onclick="deletePedido('{{this._id}}',window.location.href);return false" async
+                        class="delete-button">Eliminar</a>
                 </div>
-                
-            {{/each}}
+
             </div>
+            {{/each}}
+
+
+        </div>
+
+
 
     </div>
-
-
-    
 </div>
-</div>
-
